syntax = "proto3";

package ozon.dev.vanek623.task_manager_bot.api.storage;
option go_package = "gitlab.ozon.dev/Vanek623/task-manager-system/pkg/api/storage;storage";

service Storage {
  rpc TaskAdd(TaskAddRequest) returns (TaskAddResponse) {}

  rpc TaskList(TaskListRequest) returns (TaskListResponse) {}

  rpc TaskUpdate(TaskUpdateRequest) returns (TaskUpdateResponse) {}

  rpc TaskDelete(TaskDeleteRequest) returns (TaskDeleteResponse) {}

  rpc TaskGet(TaskGetRequest) returns (TaskGetResponse) {}
}

/// ---------------------------------------------------------------------------------------------------------------------
// TaskCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskAddRequest {
  bytes ID = 1;
  string title = 2;
  optional string description = 3;
}
message TaskAddResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskListRequest {
  uint64 Limit = 1;
  uint64 Offset = 2;
}
message TaskListResponse {
  repeated Task tasks = 1;

  message Task {
    bytes ID = 1;
    string title = 2;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// TaskUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskUpdateRequest {
  bytes ID = 1;
  string title = 2;
  optional string description = 3;
}
message TaskUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskDeleteRequest {
  bytes ID = 1;
}
message TaskDeleteResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskGetRequest {
  bytes ID = 1;
}
message TaskGetResponse {
  string title = 1;
  optional string description = 2;
  int64 edited = 3;
  int64 created = 4;
}